# Impossible-Travel-Analyzer

./: .gitignore  01-investigation.ipynb  02-deploy.ipynb  README.md  investigation_workflow.py  main.py  workshop_config.json
foundry_agent_basics/: 00-setup.ipynb  01-first-agent.ipynb  02-tools.ipynb  03-prompts-eval.ipynb  04-orchestration.ipynb  README.md  requirements.txt
foundry_agent_basics/sample_data/: eval_dataset.jsonl  soc_alert_spec.md  soc_alerts_data.csv
multi_agent/: 00-setup.ipynb  01-investigation.ipynb  02-deploy.ipynb  README.md  pyproject.toml  requirements.txt
multi_agent/hosted_agent/: main.py
multi_agent/hosted_agent/test_cases/: 01_clear_compromise.json
multi_agent/test_cases/: 02_benign_business_travel.json  04_oauth_consent_phishing.json
single_agent_skill/: .gitignore  00-setup.ipynb  01-investigation.ipynb  02-deploy.ipynb  pyproject.toml  single_agent_workflow.py  subprocess_script_runner.py  tools.py
single_agent_skill/hosted_agent/: Dockerfile  main.py
single_agent_skill/skills/soc-impossible-travel/: SKILL.md
single_agent_skill/skills/soc-impossible-travel/references/: 00_workflow_overview.md  01_location_anomaly.md  02_authentication_anomaly.md  03_token_anomaly.md  04_brute_force_pattern.md  05_mfa_abuse.md  06_post_login_activity.md  07_oauth_abuse.md  08_mailbox_manipulation.md  09_high_privilege_user.md  10_disabled_account_signin.md  paco_decision_template.md  scoring_rubric.md
single_agent_skill/test_cases/: 03_mfa_fatigue_attack.json  05_disabled_account_signin.json  README.md
(+3 files in other folders)
